Update to the new repo name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Php-react by silvajonathan</title>
+    <title>Webpack-react-php by silvajonathan</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,16 +15,16 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Php-react</h1>
+        <h1>Webpack-react-php</h1>
         <p>Mount React components by calling a render function from html &#39;script&#39; tag</p>
 
-        <p class="view"><a href="https://github.com/silvajonathan/php-react">View the Project on GitHub <small>silvajonathan/php-react</small></a></p>
+        <p class="view"><a href="https://github.com/silvajonathan/webpack-react-php">View the Project on GitHub <small>silvajonathan/php-react</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/silvajonathan/php-react/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/silvajonathan/php-react/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/silvajonathan/php-react">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/silvajonathan/webpack-react-php/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/silvajonathan/webpack-react-php/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/silvajonathan/webpack-react-php">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
