--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <h1>
-<a id="php-react" class="anchor" href="#php-react" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>php-react</h1>
+<a id="php-react" class="anchor" href="#php-react" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Webpack-react-php</h1>
 
 <p>Mount React components by calling a render function from html 'script' tag</p>
 
