--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Webpack-react-php</h1>
         <p>Mount React components by calling a render function from html &#39;script&#39; tag</p>
 
-        <p class="view"><a href="https://github.com/silvajonathan/webpack-react-php">View the Project on GitHub <small>silvajonathan/php-react</small></a></p>
+        <p class="view"><a href="https://github.com/silvajonathan/webpack-react-php">View the Project on GitHub <small>silvajonathan/Webpack-react-php</small></a></p>
 
 
         <ul>
